--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "perronnord",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "bin/serve.js",
+    "dev": "fastify start -w -l info -P app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc -p jsconfig.json"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Unlicensed",
   "dependencies": {
-    "aws-sdk": "^2.633.0",
-    "mime-types": "^2.1.26",
-    "node-fetch": "^2.6.0"
+    "@dnlup/fastify-traps": "^2.0.0",
+    "@fastify/formbody": "^7.3.0",
+    "fastify": "^4.10.2",
+    "fastify-cli": "^5.6.0",
+    "mime-types": "^2.1.35"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.10",
+    "typescript": "^4.9.3"
   }
 }
